--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -18,13 +18,76 @@
         android:layout_height="match_parent"
         tools:context=".AFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:id="@+id/tv1"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@{error}" />
+            android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@android:color/holo_red_dark"
+                app:layout_constraintBottom_toTopOf="@+id/tvb"
+                app:layout_constraintEnd_toStartOf="@+id/tvb"
+                app:layout_constraintStart_toEndOf="@+id/tva"
+                app:layout_constraintTop_toBottomOf="@+id/tva" />
+
+            <TextView
+                android:id="@+id/tva"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:background="@android:color/holo_green_dark"
+                android:gravity="center"
+                android:text="A"
+                android:textColor="@color/black"
+                android:translationZ="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tvb"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:background="@android:color/holo_green_dark"
+                android:gravity="center"
+                android:text="B"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toTopOf="@+id/tvb"
+                app:layout_constraintEnd_toStartOf="@+id/tvb"
+                app:layout_constraintStart_toEndOf="@+id/tva"
+                app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 
 
